@@ -1,4 +1,5 @@
 02 Aug 2018
+fix: schema for cheaters userip
 update: jquery remove to fade out
 
 01 Aug 2018
